
bin = [{ name = "is_unique", path = "chapter01/is_unique.rs" }]

[package]
name = "CTCI-6th-Edition-Rust"
edition = "2024"
version = "0.1.0"

# Don't publish on crates.io!
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
# You shouldn't write unsafe code!
unsafe_code = "forbid"
# You don't need unstable features in this project and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake.
empty_loop = "forbid"
# No infinite loops are needed in this project.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing.
disallowed_methods = "allow"
